<project xmlns="http://maven.apache.org/POM/5.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mskcc.cmo.smile</groupId>
  <artifactId>master</artifactId>
  <packaging>pom</packaging>
  <name>CMO SMILE Server Master</name>
  <version>0.1.0</version>
  <description>master maven module</description>
  <url>http://github.com/mskcc/smile-server/</url>

  <modules>
    <module>persistence</module>
    <module>service</module>
    <module>server</module>
    <module>model</module>
    <module>web</module>
  </modules>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.3</version>
  </parent>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </pluginRepository>
  </pluginRepositories>

  <!--https://docs.spring.io/spring-data/neo4j/docs/6.0.6/reference/html/#Migrating-->
  <properties>
    <java.version>21</java.version>
    <maven.compiler.version>3.11.0</maven.compiler.version>
    <spring.version>6.1.12</spring.version>
    <spring.boot.version>3.3.3</spring.boot.version>
    <jackson.version>2.17.2</jackson.version>
    <neo4j-ogm.version>4.0.16</neo4j-ogm.version>
    <junitjupiter.version>5.9.1</junitjupiter.version>
    <neo4j-java-driver.version>5.24.0</neo4j-java-driver.version>
    <testcontainers.version>1.20.1</testcontainers.version>
    <!-- smile messaging and shared entities dependency versions -->
    <smile_messaging_java.group>com.github.mskcc</smile_messaging_java.group>
    <smile_messaging_java.version>2.1.0.RELEASE</smile_messaging_java.version>
    <!-- smile commons centralized config properties -->
    <smile_commons.group>com.github.mskcc</smile_commons.group>
    <smile_commons.version>2.1.0.RELEASE</smile_commons.version>
    <!-- smile expected schema version -->
    <smile.schema_version>v2.3</smile.schema_version>
  </properties>

  <dependencies>
    <!-- smile commons -->
    <dependency>
      <groupId>${smile_commons.group}</groupId>
      <artifactId>smile-commons</artifactId>
      <version>${smile_commons.version}</version>
    </dependency>
    <!-- smile messaging lib -->
    <dependency>
      <groupId>${smile_messaging_java.group}</groupId>
      <artifactId>smile-messaging-java</artifactId>
      <version>${smile_messaging_java.version}</version>
    </dependency>
    <!-- spring -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${spring.boot.version}</version>
    </dependency>
    <!-- testing -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-test</artifactId>
      <version>3.3.3</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>1.20.1</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>1.20.1</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-test-autoconfigure</artifactId>
      <version>3.3.3</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>neo4j</artifactId>
      <version>1.20.1</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.3</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- neo4j -->
    <dependency>
      <groupId>org.neo4j.driver</groupId>
      <artifactId>neo4j-java-driver</artifactId>
      <version>${neo4j-java-driver.version}</version>
    </dependency>
    <!-- jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- spring data jpa -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <version>${spring.boot.version}</version>
    </dependency>
    <!-- spring data neo4j -->
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ogm-spring-boot-starter</artifactId>
      <version>1.1.0</version>
    </dependency>
    <!-- formerly javax persistence -->
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- surefire plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junitjupiter.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <!-- generate maven.properties to enable property injection from pom -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0.0</version>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>write-project-properties</goal>
            </goals>
            <configuration>
              <outputFile>src/main/resources/maven.properties</outputFile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- maven compiler plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
          <compilerArgument>-parameters</compilerArgument>
        </configuration>
      </plugin>
      <!-- maven checkstyle plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <dependencies>
          <dependency>
            <groupId>${smile_commons.group}</groupId>
            <artifactId>smile-commons</artifactId>
            <version>${smile_commons.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <encoding>UTF-8</encoding>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
          <useFile>checkstyle_report.txt</useFile>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
